# DARB-Securities-Projects-Scrips-and-Procedures

./: .gitignore  ETP_Holdings_Update_1.css  ETP_Holdings_Update_2.js  ETP_Holdings_Update_CustomView.css  README.md  ai_reg_data_model.json  ai_reg_data_model.xlsx  app101_audit_escalation_8_1.js  darb-assistant (4).js  darb_app_23_task_button.js  etp_custom_view.js  package.json
.github/: pull_request_template.md
AI Engine/: control_themes.csv  frameworks.csv  regulators.csv  (+1 more)
AI Engine/ai-reg-tracker/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
AI Engine/ai-reg-tracker/.github/: CODEOWNERS
AI Engine/ai-reg-tracker/.github/ISSUE_TEMPLATE/: new_regulation.md
AI Engine/ai-reg-tracker/.github/workflows/: ci.yml
AI Engine/ai-reg-tracker/data/: field_groups.yaml  vocab.yaml
AI Engine/ai-reg-tracker/data/regulations/: amf-ai-market-participants.yaml  bcbs-239.yaml  bcbs-sco60.yaml  bis-fsi-63.yaml  bis-fsi-73.yaml  colorado-sb-24-205.yaml  esma-algo-trading.yaml  eu-ai-act.yaml  fasb-ai-financial-reporting.yaml  finra-ai.yaml  fsb-ai.yaml  iosco-ai-capital-markets.yaml  iso-iec-42001.yaml  mas-mindforge-handbook.yaml  mica.yaml  nist-ai-rmf.yaml  oecd-ai-due-diligence.yaml  oecd-ai-principles.yaml  sec-ai-disclosure.yaml  sr-11-7.yaml
AI Engine/ai-reg-tracker/docs/: methodology.md
AI Engine/ai-reg-tracker/src/ai_reg_tracker/: __init__.py  build_changelog.py  build_json.py  build_xlsx.py  loader.py  models.py  validate.py
AI Engine/ai-reg-tracker/src/ai_reg_tracker/ingest/: draft_from_url.py
AI Engine/ai-reg-tracker/tests/: test_schema.py
(+17 files in other folders)
